Updates for KiraDb v1.1

--- a/cobertura/frame-sourcefiles.html
+++ b/cobertura/frame-sourcefiles.html
@@ -24,6 +24,9 @@ All Packages
 <td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.Field.html">Field</a> <i>(77%)</i></td>
 </tr>
 <tr>
+<td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.FieldQuery.html">FieldQuery</a> <i>(100%)</i></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.FieldType.html">FieldType</a> <i>(100%)</i></td>
 </tr>
 <tr>
@@ -36,7 +39,7 @@ All Packages
 <td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.KiraCorruptIndexException.html">KiraCorruptIndexException</a> <i>(0%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.KiraDb.html">KiraDb</a> <i>(71%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.KiraDb.html">KiraDb</a> <i>(73%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.KiraException.html">KiraException</a> <i>(100%)</i></td>
@@ -48,10 +51,13 @@ All Packages
 <td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.PorterStemmer.html">PorterStemmer</a> <i>(90%)</i></td>
 </tr>
 <tr>
+<td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.Query.html">Query</a> <i>(85%)</i></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.Record.html">Record</a> <i>(N/A)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.RecordDescriptor.html">RecordDescriptor</a> <i>(62%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.RecordDescriptor.html">RecordDescriptor</a> <i>(63%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.bdt.kiradb.S3BackingStore.html">S3BackingStore</a> <i>(12%)</i></td>
